--- a/FoodDelivery/Views/FoodItem/Index.cshtml
+++ b/FoodDelivery/Views/FoodItem/Index.cshtml
@@ -5,10 +5,10 @@
 }
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Products";
 }
 
-<h1>Index</h1>
+<h1>Products</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
