--- a/FoodDelivery/Views/Order/Confirmation.cshtml
+++ b/FoodDelivery/Views/Order/Confirmation.cshtml
@@ -4,41 +4,31 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Order Details</h1>
-
-<div>
-    <h3>Order Information</h3>
-    <dl class="row">
-        <dt class="col-sm-2">Order ID:</dt>
-        <dd class="col-sm-10">@Model.Id</dd>
-        <!-- Add other properties of OrderViewModel as needed -->
-    </dl>
+<div class="d-flex align-items-center justify-content-center">
+        <div class="cart-container">
+            <h1>Order Details</h1>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Image</h5></th>
+                        <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Name</h5></th>
+                        <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0 text-center">Amount</h5></th>
+                        <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0 text-center">Total</h5></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.OrderItems)
+                    {
+                        <tr>
+                            <td><img src="@Url.Content($"~/images/FoodItems/{item.FoodItemImage}")" alt="Food Image" class="cart-image" /></td>
+                            <td><p class="font-popins fw-medium fs-6 m-0">@item.FoodItemName</p></td>
+                            <td><p class="font-popins fw-medium fs-6 m-0 text-center">@item.Amount</p></td>
+                            <td><p class="font-popins fw-medium fs-6 m-0 text-center">@item.OrderItemTotal</p></td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+            <a href="@Url.Action("Pay", "Order", new { id = Model.Id })" class="btn btn-warning btn-register cart-btn-sub font-popins fw-medium fs-4 w-100 mt-3">Pay</a>
+        </div>
 </div>
 
-<div>
-    <h3>Order Items</h3>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Item ID</th>
-                <th>Food Item Name</th>
-                <th>Amount</th>
-                <th>Order Item Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.OrderItems)
-            {
-                <tr>
-                    <td>@item.OrderItemId</td>
-                    <td>@item.FoodItemName</td>
-                    <td>@item.Amount</td>
-                    <td>@item.OrderItemTotal</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
-
-
-<a href="@Url.Action("Pay", "Order", new { id = Model.Id })" class="btn btn-warning">Pay</a>
