--- a/FoodDelivery/Views/Order/Pay.cshtml
+++ b/FoodDelivery/Views/Order/Pay.cshtml
@@ -5,32 +5,34 @@
     ViewData["Title"] = "Pay";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="row d-flex justify-content-center">
+    <div class="col-md-6 d-flex justify-content-center bg-form-reister-container">
+        <div class="col-md-10">
+            <form method="post" asp-action="Pay" data-val="true" data-ajax="true">
+                <input type="hidden" asp-for="OrderId" />
+                <h1 class="d-flex justify-content-center topic-register">Payment</h1>
+                <h2 class="text-center topic-form">Enter your card details</h2>
+                <div class="form-floating mb-3">
+                    <input type="text" asp-for="CardNumber" class="form-control form-input" placeholder="Enter card number" />
+                    <label asp-for="CardNumber">CardNumber</label>
+                    <span asp-validation-for="CardNumber" class="text-danger"></span>
+                </div>
 
-<h2 class="mt-4">Payment</h2>
+                <div class="form-floating mb-3">
+                    <input type="text" asp-for="ExpirationDate" class="form-control form-input" placeholder="MM/YY" />
+                    <label asp-for="ExpirationDate">ExpirationDate</label>
+                    <span asp-validation-for="ExpirationDate" class="text-danger"></span>
+                </div>
 
-<div class="container mt-4">
-    <form method="post" asp-action="Pay" class="col-md-6 mx-auto" data-val="true" data-ajax="true">
-        <input type="hidden" asp-for="OrderId" />
+                <div class="form-floating mb-3">
+                    <input type="text" asp-for="CVV" class="form-control form-input" placeholder="Enter CVV" />
+                    <label asp-for="CVV">CVV</label>
+                    <span asp-validation-for="CVV" class="text-danger"></span>
+                </div>
 
-        <div class="form-group">
-            <label asp-for="CardNumber">Card Number</label>
-            <input type="text" asp-for="CardNumber" class="form-control" placeholder="Enter card number" />
-            <span asp-validation-for="CardNumber" class="text-danger"></span>
+                <button type="submit" class="btn btn-primary cart-btn-sub btn-register font-popins fw-medium fs-5 mt-4">Pay</button>
+            </form>
         </div>
-
-        <div class="form-group">
-            <label asp-for="ExpirationDate">Expiration Date</label>
-            <input type="text" asp-for="ExpirationDate" class="form-control" placeholder="MM/YY" />
-            <span asp-validation-for="ExpirationDate" class="text-danger"></span>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="CVV">CVV</label>
-            <input type="text" asp-for="CVV" class="form-control" placeholder="Enter CVV" />
-            <span asp-validation-for="CVV" class="text-danger"></span>
-        </div>
-
-        <button type="submit" class="btn btn-primary">Pay</button>
-    </form>
+    </div>
 </div>
 
