--- a/FoodDelivery/Views/Order/Confirmation.cshtml
+++ b/FoodDelivery/Views/Order/Confirmation.cshtml
@@ -6,7 +6,7 @@
 
 <div class="d-flex align-items-center justify-content-center">
         <div class="cart-container">
-            <h1>Order Details</h1>
+        <h1 class="topic-register">@ViewData["Title"]</h1>
             <table class="table">
                 <thead>
                     <tr>
