--- a/FoodDelivery/Views/Order/Details.cshtml
+++ b/FoodDelivery/Views/Order/Details.cshtml
@@ -5,39 +5,29 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Order Details</h1>
-
-<div>
-    <h3>Order Information</h3>
-    <dl class="row">
-        <dt class="col-sm-2">Order ID:</dt>
-        <dd class="col-sm-10">@Model.Id</dd>
-
-        <!-- Add other properties of OrderViewModel as needed -->
-    </dl>
-</div>
-
-<div>
-    <h3>Order Items</h3>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Item ID</th>
-                <th>Food Item Name</th>
-                <th>Amount</th>
-                <th>Order Item Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.OrderItems)
-            {
+<div class="d-flex align-items-center justify-content-center">
+    <div class="cart-container">
+        <h1 class="topic-register">@ViewData["Title"]</h1>
+        <table class="table">
+            <thead>
                 <tr>
-                    <td>@item.OrderItemId</td>
-                    <td>@item.FoodItemName</td>
-                    <td>@item.Amount</td>
-                    <td>@item.OrderItemTotal</td>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Image</h5></th>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Name</h5></th>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0 text-center">Amount</h5></th>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0 text-center">Total</h5></th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.OrderItems)
+                {
+                    <tr>
+                        <td><img src="@Url.Content($"~/images/FoodItems/{item.FoodItemImage}")" alt="Food Image" class="cart-image" /></td>
+                        <td><p class="font-popins fw-medium fs-6 m-0">@item.FoodItemName</p></td>
+                        <td><p class="font-popins fw-medium fs-6 m-0 text-center">@item.Amount</p></td>
+                        <td><p class="font-popins fw-medium fs-6 m-0 text-center">@item.OrderItemTotal</p></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
