--- a/FoodDelivery/Views/Order/Index.cshtml
+++ b/FoodDelivery/Views/Order/Index.cshtml
@@ -5,35 +5,39 @@
     ViewData["Title"] = "Order History";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="row container">
+    <div class="mt-5 pt-4">
 
-<h1>Order History</h1>
+        <h1 class="topic-register">@ViewData["Title"]</h1>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Order ID</th>
-            <th>Delivery Status</th>
-            <th>Payment Status</th>
-            <th>Order Total</th>
-            <th>Weight Total</th>
-            <th>Order Date</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var order in Model)
-        {
-            <tr>
-                <td>@order.Id</td>
-                <td>@order.DeliveryStatus</td>
-                <td>@order.PaymentStatus</td>
-                <td>@order.OrderTotal</td>
-                <td>@order.WeightTotal</td>
-                <td>@order.OrderDate</td>
-                <td>
-                    <a asp-controller="Order" asp-action="Details" asp-route-id="@order.Id">Details</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Order ID</h5></th>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Delivery Status</h5></th>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Payment Status</h5></th>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Order Total</h5></th>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Weight Total</h5></th>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Order Date</h5></th>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Actions</h5></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var order in Model)
+                {
+                    <tr>
+                        <td><p class="font-popins fw-medium fs-6 m-0">@order.Id</p></td>
+                        <td><p class="font-popins fw-medium fs-6 m-0">@order.DeliveryStatus</p></td>
+                        <td><p class="font-popins fw-medium fs-6 m-0">@order.PaymentStatus</p></td>
+                        <td><p class="font-popins fw-medium fs-6 m-0">@order.OrderTotal</p></td>
+                        <td><p class="font-popins fw-medium fs-6 m-0">@order.WeightTotal</p></td>
+                        <td><p class="font-popins fw-medium fs-6 m-0">@order.OrderDate</p></td>
+                        <td>
+                            <a class="btn btn-register cart-btn-sub font-popins fw-medium fs-5 w-75" asp-controller="Order" asp-action="Details" asp-route-id="@order.Id">Details</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
