--- a/FoodDelivery/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/FoodDelivery/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -5,20 +5,20 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h3>@ViewData["Title"]</h3>
+<h3 class="font-popins">@ViewData["Title"]</h3>
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
-        <p>
+        <p class="font-popins">Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+        <p class="font-popins">
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
         <div class="d-flex align-items-center">
             <form id="download-data" asp-page="DownloadPersonalData" method="post">
-                <button class="btn btn-primary btn-register" type="submit">Download</button>
+                <button class="btn btn-primary btn-register font-popins" type="submit">Download</button>
             </form>
             <div class="d-flex justify-content-center align-items-center ms-2">
-                <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
+                <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger font-popins">Delete</a>
             </div>
         </div>
     </div>
