--- a/FoodDelivery/wwwroot/css/site.css
+++ b/FoodDelivery/wwwroot/css/site.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+* {
+    font-family: 'Poppins', 'Arial Narrow', Arial, sans-serif;
+}
 html {
   font-size: 14px;
 }
