--- a/FoodDelivery/Views/Courier/Index.cshtml
+++ b/FoodDelivery/Views/Courier/Index.cshtml
@@ -2,56 +2,59 @@
 @using FoodDelivery.ViewModel
 @model List<OrderViewModel>
 
-<h1>Your status</h1>
+<div class="container d-flex align-items-center justify-content-center">
+    <div class="cart-container">
 
-@await Html.PartialAsync("_CourierStatusButtons", (CourierStatus)ViewBag.CourierStatus)
-<hr>
-<h1>Orders</h1>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Order ID</th>
-            <th>Delivery Status</th>
-            <th>Order Total</th>
-            <th>Weight Total</th>
-            <th>Order Date</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var order in Model)
-        {
-            <tr>
-                <td>@order.Id</td>
-                <td>@order.DeliveryStatus</td>
-                <td>@order.OrderTotal</td>
-                <td>@order.WeightTotal</td>
-                <td>@order.OrderDate</td>
-                <td>
-                    <div class="d-inline-flex">
+        <h1>Your status</h1>
+
+        @await Html.PartialAsync("_CourierStatusButtons", (CourierStatus)ViewBag.CourierStatus)
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Order ID</th>
+                    <th>Delivery</th>
+                    <th>Price</th>
+                    <th>Weight</th>
+                    <th>Date</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var order in Model)
+                {
+                    <tr>
+                        <td>@order.Id</td>
+                        <td>@order.DeliveryStatus</td>
+                        <td>@order.OrderTotal$</td>
+                        <td>@order.WeightTotal</td>
+                        <td>@order.OrderDate</td>
+                        <td>
+                            <div class="d-inline-flex">
                         
-                        <form method="post" action="@Url.Action("DeliveredOrder", "Courier", new { id = order.Id })">
-                            @Html.AntiForgeryToken() <!-- Include anti-forgery token for security -->
-                            @if (order.DeliveryStatus == DeliveryStatus.Delivered)
-                            {
-                                <button type="button" class="btn btn-outline-success" disabled>Delivered</button>
-                            }
-                            else
-                            {
-                                <button type="submit" class="btn btn-outline-success">Delivered</button>
-                            }
-                        </form>
+                                <form method="post" action="@Url.Action("DeliveredOrder", "Courier", new { id = order.Id })">
+                                    @Html.AntiForgeryToken() <!-- Include anti-forgery token for security -->
+                                    @if (order.DeliveryStatus == DeliveryStatus.Delivered)
+                                    {
+                                        <button type="button" class="btn cart-btn-sub btn-courier" disabled>Delivered</button>
+                                    }
+                                    else
+                                    {
+                                        <button type="submit" class="btn cart-btn-sub btn-courier">Delivered</button>
+                                    }
+                                </form>
                         
-                        @if (order.DeliveryStatus != DeliveryStatus.Delivered)
-                        {
-                            <form method="post" action="@Url.Action("DeclineOrder", "Courier", new { id = order.Id })">
-                                @Html.AntiForgeryToken() <!-- Include anti-forgery token for security -->
-                                <button type="submit" class="btn btn-outline-danger">Decline</button>
-                            </form>
-                        }
-                    </div>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+                                @if (order.DeliveryStatus != DeliveryStatus.Delivered)
+                                {
+                                    <form method="post" action="@Url.Action("DeclineOrder", "Courier", new { id = order.Id })">
+                                        @Html.AntiForgeryToken() <!-- Include anti-forgery token for security -->
+                                        <button type="submit" class="btn cart-btn-sub btn-courier-decline">Decline</button>
+                                    </form>
+                                }
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
