--- a/FoodDelivery/Views/Order/Index.cshtml
+++ b/FoodDelivery/Views/Order/Index.cshtml
@@ -13,7 +13,7 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Order ID</h5></th>
+                    <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">ID</h5></th>
                     <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Delivery</h5></th>
                     <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Payment</h5></th>
                     <th class="col-1" scope="col"><h5 class="font-popins fw-medium fs-5 m-0">Price</h5></th>
