--- a/FoodDelivery/Views/Shared/_LoginPartial.cshtml
+++ b/FoodDelivery/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a class="nav-link text-dark font-popins fs-6" asp-controller="Cart" asp-action="Index">Cart</a>
+        <a class="nav-link text-dark font-popins fs-6" asp-controller="Cart" asp-action="Index"><img src="~/svg/cart.svg" class="login-partial-icon"/></a>
     </li>
 
     <li class="nav-item">
