--- a/FoodDelivery/Views/Shared/_AdminLoginPartial.cshtml
+++ b/FoodDelivery/Views/Shared/_AdminLoginPartial.cshtml
@@ -7,14 +7,14 @@
 {
 
     <li class="nav-item">
-            <a class="nav-link text-dark" title="Manage">Hello @User.Identity?.Name!</a>
+            <a class="nav-link text-dark" title="Manage">Hello Admin!</a>
     </li>
+        <li class="nav-item">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="nav-link btn btn-link text-dark font-popins fs-6">Logout</button>
+            </form>
+        </li>
 
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
 }
 else
 {
