--- a/FoodDelivery/Views/Shared/_LoginPartial.cshtml
+++ b/FoodDelivery/Views/Shared/_LoginPartial.cshtml
@@ -3,32 +3,36 @@
 @inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark font-popins fs-6" asp-controller="Cart" asp-action="Index"><img src="~/svg/cart.svg" class="login-partial-icon"/></a>
-    </li>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        @if (!User.IsInRole("Courier") && !User.IsInRole("Admin"))
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark font-popins fs-6" asp-controller="Cart" asp-action="Index"><img src="~/svg/cart.svg" class="login-partial-icon"/></a>
+            </li>
+        }
 
-    <li class="nav-item">
-        <a class="nav-link text-dark font-popins fs-6" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-    </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark font-popins fs-6" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+        </li>
 
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark font-popins fs-6">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark font-popins fs-6" asp-area="Identity" asp-page="/Account/CourierRegister">Work as Courier</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark font-popins fs-6" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark font-popins fs-6" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
+        <li class="nav-item">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="nav-link btn btn-link text-dark font-popins fs-6">Logout</button>
+            </form>
+        </li>
+
+    }
+    else
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark font-popins fs-6" asp-area="Identity" asp-page="/Account/CourierRegister">Work as Courier</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark font-popins fs-6" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark font-popins fs-6" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
+    }
 </ul>
