--- a/FoodDelivery/Views/FoodItem/Details.cshtml
+++ b/FoodDelivery/Views/FoodItem/Details.cshtml
@@ -7,68 +7,60 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<div class="container d-flex align-items-center justify-content-center w-50">
+        <div class="cart-container pt-4 pb-4 ps-0 pe-0 w-75">
+            <div class="d-flex align-items-center justify-content-center">
+                <div>
 
-<div>
-    <h4>FoodItemViewModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AddedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AddedDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryId)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CategoryName)
-        </dd>
-
-        <dd>
-            @if (!string.IsNullOrEmpty(Model.ImageUrl))
-            {
-                <img src="~/Images/FoodItems/@Model.ImageUrl" alt="Food Item Image" style="max-width: 300px; max-height: 300px;" />
-            }
-            else
-            {
-                <span>No image available</span>
-            }
-        </dd>
-    </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+                    <h1 class="topic-register">Details</h1>
+                    <table class="table w-50">
+                        <tr>
+                            <th>@Html.DisplayNameFor(model => model.Id)</th>
+                            <td>@Html.DisplayFor(model => model.Id)</td>
+                        </tr>
+                        <tr>
+                            <th>@Html.DisplayNameFor(model => model.Name)</th>
+                            <td>@Html.DisplayFor(model => model.Name)</td>
+                        </tr>
+                        <tr>
+                            <th>@Html.DisplayNameFor(model => model.Description)</th>
+                            <td>@Html.DisplayFor(model => model.Description)</td>
+                        </tr>
+                        <tr>
+                            <th>@Html.DisplayNameFor(model => model.Price)</th>
+                            <td>@Html.DisplayFor(model => model.Price)</td>
+                        </tr>
+                        <tr>
+                            <th>@Html.DisplayNameFor(model => model.AddedDate)</th>
+                            <td>@Html.DisplayFor(model => model.AddedDate)</td>
+                        </tr>
+                        <tr>
+                            <th>@Html.DisplayNameFor(model => model.CategoryId)</th>
+                            <td>@Html.DisplayFor(model => model.CategoryId)</td>
+                        </tr>
+                        <tr>
+                            <th>@Html.DisplayNameFor(model => model.CategoryName)</th>
+                            <td>@Html.DisplayFor(model => model.CategoryName)</td>
+                        </tr>
+                        <tr>
+                    
+                            <th colspan="2">
+                                @if (!string.IsNullOrEmpty(Model.ImageUrl))
+                                {
+                                    <img src="~/Images/FoodItems/@Model.ImageUrl" alt="Food Item Image" style="max-width: 300px; max-height: 300px; border-radius: 10px;" />
+                                }
+                                else
+                                {
+                                    <span>No image available</span>
+                                }
+                            </th>
+                        </tr>
+                    </table>
+                        <div>
+                                @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new {@class="btn"})
+                                <a asp-action="Index" class="btn">Back to List</a>
+                        </div>
+                </div>
+            </div>
+        </div>
 </div>
