--- a/FoodDelivery/Views/FoodItem/Create.cshtml
+++ b/FoodDelivery/Views/FoodItem/Create.cshtml
@@ -9,7 +9,7 @@
 <div class="d-flex align-items-center justify-content-center">
     <div class="cart-container w-50 pb-3">
 
-        <h1>Create</h1>
+        <h1 class="topic-register">Create</h1>
 
         <div>
             <div>
