--- a/FoodDelivery/Views/Category/Create.cshtml
+++ b/FoodDelivery/Views/Category/Create.cshtml
@@ -7,30 +7,31 @@
 @{
     ViewData["Title"] = "Create";
 }
+<div class="d-flex align-items-center justify-content-center">
+    <div class="cart-container w-25 pt-4 pb-3">
 
-<h1>@ViewData["Title"]</h1>
+        <h1 class="topic-register">@ViewData["Title"]</h1>
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        <div>
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Title" class="control-label"></label>
+                        <input asp-for="Title" class="form-control" />
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn cart-btn-sub btn-register mt-3"  />
+                    </div>
+                </form>
+        </div>
+
+        <div class="d-flex align-items-center justify-content-center">
+            <a asp-action="Index" class="btn mt-1">Back to List</a>
+        </div>
+
+        @section Scripts {
+            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        }
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
