--- a/FoodDelivery/Views/Category/Delete.cshtml
+++ b/FoodDelivery/Views/Category/Delete.cshtml
@@ -6,30 +6,33 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<div class="d-flex align-items-center justify-content-center">
+    <div class="cart-container w-50 pt-4 pb-3">
+        <h1 class="topic-register">Delete</h1>
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>CategoryViewModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-    </dl>
+        <h3>Are you sure you want to delete this?</h3>
+        <div>
+            <h4>CategoryViewModel</h4>
+            <hr />
+            <dl class="row">
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Id)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Id)
+                </dd>
+                <dt class = "col-sm-2">
+                    @Html.DisplayNameFor(model => model.Title)
+                </dt>
+                <dd class = "col-sm-10">
+                    @Html.DisplayFor(model => model.Title)
+                </dd>
+            </dl>
     
-    <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+            <form asp-action="Delete">
+                <input type="submit" value="Delete" class="btn btn-courier-decline" />
+                <a asp-action="Index" class="btn btn-courier">Back to List</a>
+            </form>
+        </div>
+    </div>
 </div>
