--- a/FoodDelivery/Views/Category/Index.cshtml
+++ b/FoodDelivery/Views/Category/Index.cshtml
@@ -8,68 +8,74 @@
 @{
     ViewData["Title"] = "Index";
 }
+<div class="d-flex align-items-center justify-content-center">
+    <div class="cart-container w-50">
 
-<h1>Categories</h1>
+        <div class="d-flex align-items-center justify-content-between">
+            <h1 class="topic-register mb-0">Categories</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Items.First().Id) <!-- Corrected this line -->
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Items.First().Title) <!-- Corrected this line -->
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Items)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+            <div class="d-flex align-items-center">
+                <a asp-action="Create" class="btn btn-lg btn-primary btn-register fs-5">Create New</a>
+            </div>
+        </div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Items.First().Id) <!-- Corrected this line -->
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Items.First().Title) <!-- Corrected this line -->
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Items)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Id)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Title)
+                        </td>
+                        <td class="d-flex justify-content-end">
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class="btn" } )
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new{ @class="btn" })
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 
-<nav aria-label="Page navigation">
-    <ul class="pagination pagination-sm justify-content-center">
-        @if (Model.HasPreviousPage)
-        {
-            <li class="page-item">
-                <a class="page-link" href="@Url.Action("Index", new { page = Model.CurrentPage - 1, pageSize = Model.PageSize })" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-        }
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                @if (Model.HasPreviousPage)
+                {
+                    <li class="page-item pagination-bg">
+                        <a class="page-link pagination-link" href="@Url.Action("Index", new { page = Model.CurrentPage - 1, pageSize = Model.PageSize })" aria-label="Previous">
+                            <span aria-hidden="true" class="pagination-link fw-medium fs-6">&laquo;</span>
+                        </a>
+                    </li>
+                }
 
-        @for (int i = 1; i <= Model.TotalPages; i++)
-        {
-            <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                <a class="page-link" href="@Url.Action("Index", new { page = i, pageSize = Model.PageSize })">@i</a>
-            </li>
-        }
+                @for (int i = 1; i <= Model.TotalPages; i++)
+                {
+                    <li class="page-item pagination-bg @(i == Model.CurrentPage ? "active" : "")">
+                        <a class="page-link pagination-link" href="@Url.Action("Index", new { page = i, pageSize = Model.PageSize })">@i</a>
+                    </li>
+                }
 
-        @if (Model.HasNextPage)
-        {
-            <li class="page-item">
-                <a class="page-link" href="@Url.Action("Index", new { page = Model.CurrentPage + 1, pageSize = Model.PageSize })" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        }
-    </ul>
-</nav>
+                @if (Model.HasNextPage)
+                {
+                    <li class="page-item pagination-bg">
+                        <a class="page-link pagination-link" href="@Url.Action("Index", new { page = Model.CurrentPage + 1, pageSize = Model.PageSize })" aria-label="Next">
+                            <span aria-hidden="true" class="pagination-link fw-medium fs-6">&raquo;</span>
+                        </a>
+                    </li>
+                }
+            </ul>
+        </nav>
+    </div>
+</div>
