--- a/FoodDelivery/Views/FoodItem/Delete.cshtml
+++ b/FoodDelivery/Views/FoodItem/Delete.cshtml
@@ -7,7 +7,7 @@
 <div class="container d-flex align-items-center justify-content-center w-75">
     <div class="cart-container">
 
-        <h1>Delete</h1>
+        <h1 class="topic-register">Delete</h1>
 
         <h3>Are you sure you want to delete this?</h3>
         <div>
