--- a/FoodDelivery/Views/FoodItem/Index.cshtml
+++ b/FoodDelivery/Views/FoodItem/Index.cshtml
@@ -10,12 +10,12 @@
 
 <div class="container d-flex align-items-center justify-content-center">
     <div class="bg-form-reister-container">
-        <div class="d-flex justify-content-between">
-            <h1 class="topic-register">Products</h1>
+        <div class="d-flex align-content-center justify-content-between">
+            <h1 class="topic-register mb-0">Products</h1>
 
-            <p>
-                <a asp-action="Create" class="btn btn-lg btn-primary btn-register fs-5 pt-1 pb-1">Create New</a>
-            </p>
+            <div class="d-flex align-content-center">
+                <a asp-action="Create" class="btn btn-lg btn-primary btn-register fs-5">Create New</a>
+            </div>
         </div>
 
 
