--- a/FoodDelivery/Views/Shared/_Layout.cshtml
+++ b/FoodDelivery/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container-fluid">
-                <a asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/Logo/favicon.svg" class="logo" /></a><a class="navbar-brand font-popins fw-medium fs-5" asp-area="" asp-controller="Home" asp-action="Index">FoodDelivery</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="d-flex align-items-center justify-content-center"><img src="/images/Logo/favicon.svg" class="logo m-0 me-1" /></a><a class="navbar-brand font-popins fw-medium fs-5" asp-area="" asp-controller="Home" asp-action="Index">FoodDelivery</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -32,7 +32,7 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-primary text-end" asp-controller="Category" asp-action="Index">Go to admin panel</a>
+                                <a class="nav-link text-dark text-end" asp-controller="Category" asp-action="Index">Go to admin panel</a>
                             </li>
                         }
                         @if (User.IsInRole("Courier"))
