--- a/FoodDelivery/Views/Shared/_AdminLayout.cshtml
+++ b/FoodDelivery/Views/Shared/_AdminLayout.cshtml
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - FoodDelivery</title>
-    <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/register_login.css" asp-append-version="true" />
@@ -14,6 +13,7 @@
     <link rel="stylesheet" href="~/css/footer.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/manage.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/courier.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/FoodDelivery.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -51,8 +51,8 @@
         <div>
             <p class="font-popins footer-info">&copy; 2023 - FoodDelivery - All rights reserved</p>
         </div>
-        <div class="d-flex align-items-center justify-content-center">
-            <img alt="phone" src="/svg/phone.svg" />
+        <div class="contact-info">
+            <img src="/svg/phone.svg" />
             <a class="font-popins footer-info" href="tel:">+380502334698</a>
         </div>
     </footer>
