--- a/FoodDelivery/wwwroot/css/site.css
+++ b/FoodDelivery/wwwroot/css/site.css
@@ -11,6 +11,28 @@ html {
     font-size: 16px;
   }
 }
+@media (min-width: 425px) and (max-width: 768px) {
+    .hidden-item {
+        padding: 0;
+        margin: 0;
+        display: none;
+    }
+}
+@media (max-width: 426px) {
+    .hidden-item {
+        padding: 0;
+        margin: 0;
+        display: none;
+    }
+    .hidden-item__elem {
+        padding: 0;
+        margin: 0;
+        display: none;
+    }
+    .cart-container{
+        background-color: transparent;
+    }
+}
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
